added time, music center and line break.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,27 @@
             <div class="art">
                 <img class="center" src="images/drake 1.jpeg" alt="drake" id="artist">
             </div>
+            <div class="artist-name">
+                <p class="title">Gods plan</p> 
+            </div>
+            <div class="progress-bar">
+                <div class="time">
+                    <div class="start">
+                        <p id="start">0:00</p> 
+                    </div>
+                    <div class="end">
+                        <p id="end">0:00</p>
+                    </div>
+                </div> 
+                <div class="line">
+                    <div class="linechild"></div>
+                </div>   
+            </div>
+            <div class="msc center">
+                <div class="ctrl center" onclick="backward()">
+                    <i class="fa-solid fa-backward-step"></i>
+            </div>
         </div>
-
+    </div>
 </body>
-</html>
+</html> 
