--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="box-1 center">
             <h4 id="name">Drake</h4>
             <div class="art">
-                <img class="center" src="/images /drake 1.jpeg" alt="" id="artist">
+                <img class="center round" src="/images /drake 1.jpeg" alt="" id="artist">
             </div>
-            <div class="artist-name">
-                <p class="title">Gods plan</p> 
+            <div class="art-name">
+                <p class="title run">Gods plan</p> 
             </div>
             <div class="progress-bar">
                 <div class="time">
