--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music player 1</title>
@@ -48,5 +49,8 @@
         </div>
     </div>
     </div>
+
+    <script src="app.js"></script>
+    
 </body>
 </html> 
