js code, audio, initial commit songs, style.css, index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div class="box-1 center">
             <h4 id="name">Drake</h4>
             <div class="art">
-                <img class="center round" src="/images /drake 1.jpeg" alt="">
+                <img class="center" src="/images /drake 1.jpeg" alt="">
             </div>
             <div class="art-name">
-                <p class="title run">God's plan</p> 
+                <p class="title">Jimmy Crooks</p> 
             </div>
             <div class="progress-bar">
                 <div class="time">
@@ -44,13 +44,13 @@
                 <div class="ctrl center" onclick="forward()">
                    <i class="fa-solid fa-forward-step"></i>
                 </div>
-                <audio src="" class="son"></audio>   
+                <audio src="./" class="son"></audio>   
             </div>
         </div>
     </div>
     </div>
 
     <script src="app.js"></script>
-    
+
 </body>
 </html> 
