moved from songs folder to music folder.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="ctrl center" onclick="forward()">
                    <i class="fa-solid fa-forward-step"></i>
                 </div>
-                <audio src="./" class="son"></audio>   
+                <audio src="" class="son"></audio>   
             </div>
         </div>
     </div>
