--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
     <div class="box center">
         <div class="box-1 center">
-            <h4 id="name">Drake</h4>
+            <h4 id="name"></h4>
             <div class="art">
-                <img class="center" src="/images /drake 1.jpeg" alt="">
+                <img class="center" src="" alt="">
             </div>
             <div class="art-name">
-                <p class="title">Jimmy Crooks</p> 
+                <p class="title"></p> 
             </div>
             <div class="progress-bar">
                 <div class="time">
@@ -44,13 +44,13 @@
                 <div class="ctrl center" onclick="forward()">
                    <i class="fa-solid fa-forward-step"></i>
                 </div>
-                <audio src="./songs/Drake - Jimmy Cooks ft. 21 Savage.mp3" class="son"></audio>   
+                <audio src="" class="son"></audio>   
             </div>
         </div>
     </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="script.js0"></script>
 
 </body>
 </html> 
